--- a/roles/cobbler/tasks/main.yml
+++ b/roles/cobbler/tasks/main.yml
@@ -1,333 +1,21 @@
 ---
-# file: main.yml
-# The tasks for the Cobbler role
+- name: set next server in cobbler settings
+  lineinfile: dest=/etc/cobbler/settings regexp='^next_server' line='next_server:'{{ rpc_prep_ip }}
 
-# -------------
-# Prerequisites
-# -------------
+- name: set server in cobbler settings
+  lineinfile: dest=/etc/cobbler/settings regexp='^server' line='server:'{{ rpc_prep_ip }}
 
-- name: unsupported package manager
-  fail: msg='this playbook requries yum or apt only'
-  when: ansible_pkg_mgr != 'yum' and ansible_pkg_mgr != 'apt'
+- name: dhcp interface
+  lineinfile: dest=/etc/default/isc-dhcp-server regexp='^INTERFACES=' line="INTERFACES="{{ dhcp_interfaces }}
 
-# -------------
-# facts
-# -------------
+- name: dhcp config
+  template: src=templates/cobbler_dhcp.j2 dest=/etc/cobbler/dhcp.template
 
-- set_fact:
-    daemon: cobbler
-  when: ansible_pkg_mgr == 'apt'
+- name: import image to cobbler
+  command: cobbler import --name=ubuntu-14.04.4-server-amd64 --path=/root/ubuntu-14.04.3-server-amd64
 
-- set_fact:
-    daemon: cobblerd
-  when: ansible_pkg_mgr == 'yum'
+- name: delete image
+  file: path=/opt/ubuntu-14.04.3-server-amd64 state=absent
 
-# ---------------
-# Package Sources
-# ---------------
-
-# yum
-- name: configure epel repo (yum)
-  template: src=epel.repo.j2
-        dest=/etc/yum.repos.d/epel.repo
-        owner=root group=root mode=0644
-  when: ansible_pkg_mgr == 'yum'
-
-# ------------
-# Dependencies
-# ------------
-
-# yum
-- name: install dependencies (yum)
-  yum: name={{ item }} state=present
-  with_items:
-    - xinetd
-    - dhcp
-  when: ansible_pkg_mgr == 'yum'
-
-# apt
-- name: install dependencies (apt)
-  apt: name={{ item }} state=present update_cache=true
-  with_items:
-    - xinetd
-    - isc-dhcp-server
-    - debmirror
-  when: ansible_pkg_mgr == 'apt'
-
-# -------
-# selinux
-# -------
-- name: set selinux to permissive (yum)
-  selinux: policy=targeted state=permissive
-  when: ansible_pkg_mgr == 'yum'
-
-# -----
-# dhcpd
-# -----
-- name: configure dhcpd (yum)
-  template: src=dhcpd.j2 dest=/etc/sysconfig/dhcpd
-  when: ansible_pkg_mgr == 'yum'
-
-- name: enable dhcpd (yum)
-  service: name=dhcpd state=stopped enabled=true
-  when: ansible_pkg_mgr == 'yum'
-
-# ---------------
-# isc-dhcp-server
-# ---------------
-- name: configure isc-dhcp-server (apt)
-  template: src=isc-dhcp-server.j2 dest=/etc/default/isc-dhcp-server
-  when: ansible_pkg_mgr == 'apt'
-
-- name: enable isc-dhcp-server (apt)
-  service: name=isc-dhcp-server state=stopped enabled=true
-  when: ansible_pkg_mgr == 'apt'
-
-# ---------
-# firewalld
-# ---------
-- name: check if firewalld is installed
-  sudo: yes
-  command: which firewalld
-  register: firewalld
-  changed_when: false
-  ignore_errors: true
-
-- name: check if firewalld service is running
-  sudo: yes
-  command: firewall-cmd --state
-  register: firewalld_svc
-  ignore_errors: true
-  when: firewalld|success
-
-- name: enable cobbler tftpd through firewalld
-  sudo: yes
-  firewalld: service=tftp permanent=true state=enabled
-  notify: restart firewalld
-  when: firewalld|success and firewalld_svc.stdout=='running'
-
-- name: enable cobbler httpd through firewalld
-  sudo: yes
-  firewalld: service=http permanent=true state=enabled
-  notify: restart firewalld
-  when: firewalld|success and firewalld_svc.stdout=='running'
-
-# ---
-# ufw
-# ---
-- name: check if ufw is installed
-  sudo: yes
-  command: which ufw
-  register: ufw
-  changed_when: false
-  ignore_errors: true
-
-- name: allow tftp through ufw
-  sudo: yes
-  ufw: rule=allow port=69 proto=tcp
-  when: ufw|success
-
-- name: allow http through ufw
-  sudo: yes
-  ufw: rule=allow port=80 proto=tcp
-  when: ufw|success
-
-# -------
-# Cobbler
-# -------
-- name: install cobbler (yum)
-  yum: name=cobbler state=present
-  when: ansible_pkg_mgr == 'yum'
-
-- name: install cobbler (apt)
-  apt: name=cobbler state=present
-  when: ansible_pkg_mgr == 'apt'
-
-- stat: path=/etc/apache2
-  register: apache2_path
-
-- name: start and enable apache2
-  service: name=apache2 state=started enabled=true
-  when: apache2_path.stat.isdir is defined and apache2_path.stat.isdir
-
-- stat: path=/etc/httpd
-  register: httpd_path
-
-- name: start and enable httpd
-  service: name=httpd state=started enabled=true
-  when: httpd_path.stat.isdir is defined and httpd_path.stat.isdir
-
-- name: configure xinetd rsync
-  copy: src=rsync
-        dest=/etc/xinetd.d/
-        owner=root group=root mode=0644
-  notify: restart xinetd
-
-- name: start and enable xinetd
-  service: name=xinetd state=started enabled=true
-
-- name: print host vars
-  template: src=host_vars.j2 dest=/opt/hostvars
-
-- name: configure cobbler
-  template: src=settings.j2 dest=/etc/cobbler/settings
-  notify:
-    - restart cobbler
-    - wait for cobbler
-    - sync cobbler
-
-- name: start and enable cobbler
-  service: name={{daemon}} state=started enabled=true
-
-- name: wait for cobbler
-  wait_for: host=127.0.0.1 port=25151 delay=5 timeout=30 state=started
-
-#- name: get cobbler loaders
-#  command: cobbler get-loaders
-#  args:
-#    creates: /var/lib/cobbler/loaders/README
-#  when: cobbler_get_loaders
-#  notify:
-#    - restart cobbler
-#    - wait for cobbler
-#    - sync cobbler
-
-#- name: update cobbler signatures
-#  command: cobbler signature update
-#  when: cobbler_signature_update
-#  notify:
-#    - restart cobbler
-#    - wait for cobbler
-#    - sync cobbler
-
-- name: configure cobbler dhcp
-  template: src=dhcp.template.j2 dest=/etc/cobbler/dhcp.template
-  notify:
-    - restart cobbler
-    - wait for cobbler
-    - sync cobbler
-
-- name: adding defualt ubuntu preseed
-  template: src=ubuntu-server.preseed.j2 dest=/etc/cobbler/ubuntu-server.preseed
-
-# ---------------------
-# Cobbler Distributions
-# ---------------------
-
-# Attempt to un-mount any previous disto mount points, can occur if previous run failed
-- name: umount isos
-  shell: umount {{ item.path | quote }}
-  with_items: distros
-  when: distros is defined
-  ignore_errors: yes
-
-- name: create iso directory to hold distro images
-  file: path=~/iso state=directory
-
-# Download each defined distro ISO if it doesn't already exist
-- name: download distro iso files
-  get_url: url={{ item.url }} dest={{ item.file }}
-  with_items: distros
-  when: distros is defined
-
-# Add the each distro/profile pair only if the distro doesn't already exist
-- name: check distro exists in cobbler
-  with_items: distros
-  command: cobbler distro report --name="{{ item.name }}"
-  register: distro_result
-  ignore_errors: true
-  when: distros is defined
-
-#- name: add distro/profile pairs to cobbler
-#  shell: >
-#    (mkdir -p {{ item.path | quote }}
-#    && mount -t iso9660 -o loop,ro {{ item.file | quote }} {{ item.path | quote }}
-#    && cobbler import --path={{ item.path | quote }} --name={{ item.name | quote }} --arch={{ item.arch | quote }} {% if item.kickstart is defined %}--kickstart={{ item.kickstart | quote }}{% endif %}
-#    && umount {{ item.path | quote }})
-#  with_items: distros
-#  when: distros is defined and distro_result|failed
-#  notify:
-#    - restart cobbler
-#    - wait for cobbler
-#    - sync cobbler
-
-#- name: check distro for import exists in cobbler
-#  with_items: distro_imports
-#  command: cobbler distro report --name="{{ item.name }}"
-#  register: distro_imports_result
-#  ignore_errors: true
-#  when: distro_imports is defined
-
-#- name: import distro to cobbler
-#  shell: cobbler import --name="{{ item.name }}-{{ item.arch }}" --path="{{ item.url }}" --arch="{{ item.arch }}"
-#  with_items: distro_imports
-#  when: distro_imports is defined and distro_imports_result|failed
-#  notify:
-#    - restart cobbler
-#    - wait for cobbler
-#    - sync cobbler
-
-# ---------------
-# Cobbler Repos
-# ---------------
-
-- name: add repos to cobbler
-  shell: >
-    cobbler repo add
-    --clobber
-    --name={{ item.name | quote }}
-    --mirror={{ item.mirror | quote }}
-    {% if item.arch is defined %}--arch={{ item.arch | quote }}{% endif %}
-    {% if item.mirror_locally is defined %}--mirror-locally={{ item.mirror_locally | quote }}{% endif %}
-  with_items: repos
-  when: repos is defined
-  notify:
-    - restart cobbler
-    - wait for cobbler
-    - sync cobbler
-
-# ---------------
-# Cobbler Profiles
-# ---------------
-
-- name: add profiles to cobbler
-  shell: >
-    cobbler profile add
-    --clobber
-    --name={{ item.name | quote }}
-    --distro={{ item.distro | quote }}
-    {% if item.kickstart is defined %}--kickstart={{ item.kickstart | quote }}{% endif %}
-    {% if item.ksmeta is defined %}--ksmeta={{ item.ksmeta | quote }}{% endif %}
-    {% if item.repos is defined %}--repos={{ item.repos | quote }}{% endif %}
-  with_items: profiles
-  when: profiles is defined
-  notify:
-    - restart cobbler
-    - wait for cobbler
-    - sync cobbler
-
-# ---------------
-# Cobbler Systems
-# ---------------
-
-#- name: add systems to cobbler
-#  shell: >
-#    cobbler system add
-#    --clobber
-#    --name={{ item.name | quote }}
-#    --hostname={{ item.hostname | quote }}
-#    --profile={{ item.profile | quote }}
-#    --ip-address={{ item.ip | quote }}
-#    --gateway={{ item.gateway | quote }}
-#    --mac={{ item.mac | quote }}
-#    --interface={{ item.interface | quote }}
-#    --netboot-enabled={{ item.netboot | quote }}
-#    {% if item.static is defined %}--static={{ item.static | quote }}{% endif %}
-#    {% if item.dhcptag is defined %}--dhcp-tag={{ item.dhcptag | quote }}{% endif %}
-#    {% if item.next_server is defined %}--server {{ item.next_server | quote }}{% endif %}
-#  with_items: systems
-#  when: systems is defined
-#  notify:
-#    - restart cobbler
-#    - wait for cobbler
-#    - sync cobbler
+- name: get sources.list file
+  get_url: url=https://raw.githubusercontent.com/jameswthorne/default-ubuntu-sources.list/master/trusty-sources.list dest=/var/www/html/trusty-sources.list
