--- a/ci_infra.yml
+++ b/ci_infra.yml
@@ -8,18 +8,25 @@
         - vlan
         - bridge-utils
         - lxc
+      environment:
+        http_proxy: "{{ http_proxy }}"
+        https_proxy: "{{ https_proxy }}"
+        HTTP_PROXY: "{{ http_proxy }}"
+        HTTPS_PROXY: "{{ https_proxy }}"
 
-    - name: setup br device 
-      script: scripts/append_br_interface.sh {{ br_host_ip }} {{ rpc_prep_netmask }} {{ rpc_prep_gateway }} {{ rpc_prep_dns_nameservers }} {{ bridge_ports }}
+    - name: setup br device
+      template: src=cobbler_templates/interfaces.j2 dest=/etc/network/interfaces 
 
     - name: start br device
       command: ifup br-host
+    - name: start br device
+      command: ifup br-ipmi
 
     - name: get rpc prep lxc container
-      get_url: url=http://public.thornelabs.net/rpc-prep-lxc-container.tar.gz dest=/opt/rpc-prep-lxc-container.tar.gz
+      get_url: url=http://mirror.rs.zbi.cba:8081/images/rpc-prep-lxc-container.tar.gz dest=/opt/rpc-prep-lxc-container.tar.gz
 
     - name: get ubuntu image
-      get_url: url=http://releases.ubuntu.com/14.04.4/ubuntu-14.04.4-server-amd64.iso dest=/opt/ubuntu-14.04.4-server-amd64.iso
+      get_url: url=http://mirror.rs.zbi.cba:8081/images/ubuntu-14.04.4-server-amd64.iso dest=/opt/ubuntu-14.04.4-server-amd64.iso
 
     - name: mount iso
       mount: name=/mnt src=/opt/ubuntu-14.04.4-server-amd64.iso fstype=iso9660 opts=loop state=mounted
@@ -28,7 +35,7 @@
       unarchive: src=/opt/rpc-prep-lxc-container.tar.gz dest=/var/lib/lxc/
 
     - name: set container config
-      lineinfile: dest=/var/lib/lxc/rpc-prep/config regexp="^lxc\.network\.ipv4" line="lxc.network.ipv4 ="{{ rpc_prep_subnet }}
+      template: src=cobbler_templates/lxc_config.j2 dest=/var/lib/lxc/rpc-prep/config
 
     - name: stop container
       command: lxc-stop -n rpc-prep
@@ -81,20 +88,17 @@
 - name: Run Cobbler on Container
   hosts: cobbler
   tasks: 
-    - name: set next server in cobbler settings
-      lineinfile: dest=/etc/cobbler/settings regexp="^next_server" line="next_server:"{{ rpc_prep_ip }}
-
-    - name: set server in cobbler settings
-      lineinfile: dest=/etc/cobbler/settings regexp="^server" line="server:"{{ rpc_prep_ip }}
+    - name: set server vars in cobbler settings
+      template: src=cobbler_templates/settings.j2 dest=/etc/cobbler/settings
 
     - name: dhcp interface
       lineinfile: dest=/etc/default/isc-dhcp-server regexp='^INTERFACES=' line="INTERFACES="{{ dhcp_interfaces }}
 
     - name: dhcp config
-      template: src=templates/cobbler_dhcp.j2 dest=/etc/cobbler/dhcp.template
+      template: src=cobbler_templates/dhcp.j2 dest=/etc/cobbler/dhcp.template
 
     - name: import image to cobbler
-      command: cobbler import --name=ubuntu-14.04.4-server-amd64 --path=/root/ubuntu-14.04.4-server-amd64
+      command: cobbler import --name=ubuntu-14.04.4-server-amd64 --path=/opt/ubuntu-14.04.4-server-amd64
 
     - name: delete image
       file: path=/opt/ubuntu-14.04.4-server-amd64 state=absent
